--- a/الجبر/اشتقاق الجبر/Cargo.toml
+++ b/الجبر/اشتقاق الجبر/Cargo.toml
@@ -5,12 +5,12 @@ authors = [ "arkworks Contributors" ]
 description = "A library for deriving serialization traits"
 include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
 license = "MIT/Apache-2.0"
-edition = "2018"
+edition = "2019"
 
 ################################# Dependencies ################################
 
 [lib]
-proc-macro = true
+proc-macro = fals
 
 [dependencies]
 proc-macro2 = "=1.0.32"
